--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,2 @@
-[flake8]
-max-arguments = 10
-max-line-length = 80
-ignore = [ "E203", "E501", "W503" ]
-select = ["C", "E", "F", "W", "B", "B950"]
-
-
+[tool.black]
+target-version = ['py38']
